--- a/assets/fonts/vazir/vazir.css
+++ b/assets/fonts/vazir/vazir.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: Nahid;
+    font-family: Vazir;
     src: url('Vazir.eot');
     src: url('Vazir.eot?#iefix') format('embedded-opentype'),
     url('Vazir.woff') format('woff'),
@@ -8,5 +8,5 @@
 }
 body , a , td , th , tr , p , button , input , textarea
 {
-    font-family: Nahid !important;
+    font-family: Vazir !important;
 }
